Fix overflow bug.

--- a/public/stylesheets/homeb.less
+++ b/public/stylesheets/homeb.less
@@ -23,12 +23,12 @@ a:active{
   width: 800px;
   margin: 0 auto;
   padding: 0px;
-  overflow: auto;
 }
 
 //begin header
 .header{
   margin-top: 15px;
+  position: relative;
 } 
 
 .header .avatar{
@@ -46,7 +46,7 @@ a:active{
 
 .navigator {
   position: absolute;
-  top: 15px;
+  top: 0px;
   left: 108px;
   min-height: 76px;
   width: 512px;
@@ -79,7 +79,7 @@ a:active{
 
 .sign{
   position: absolute;
-  top: 91px;
+  bottom: 0px;
   left: 108px;
   width: 512px;
   background-color: rgb(199,227,239);
@@ -95,6 +95,8 @@ a:active{
 //begin content
 .content{
   margin-top: 15px;
+  position: relative;
+  margin-bottom: 10px;
 }
 
 
